DB Initialization is done